# Journal-Observatory-data

./: .gitignore  .python-version  README.org  doaj_context.json  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
config/: api.conf  graphdb-job-config.ttl  graphdb-pad-config.ttl  job.conf  pad.conf  template.conf
data/: doaj_context.json  doaj_convert.sparql  issn_qss.json  openalex_context.json  openalex_convert.sparql  pad_shacl.ttl  publishers_peer_review_context.json  publishers_peer_review_convert.sparql  publishers_peer_review_mapping.json  sherpa_romeo_context.json  sherpa_romeo_convert.sparql  uri_mapping.json  wikidata.sparql
docs/: job_prototype.drawio  job_prototype_revisit.drawio  pad.org
flask/: Dockerfile
jena/: Dockerfile  bulk_import.sh  docker-entrypoint.sh  start.sh
ontology/: job_ontology.drawio  job_ontology_apc.drawio  job_ontology_assertion.drawio  job_ontology_publishing_policy.drawio  ontology.ttl  ontology.ttl.bak  pad_creators.org  pad_creators.ttl  pad_framework.drawio  pad_framework.org  pad_framework.ttl  ppo_ontology.drawio  ppo_ontology.org  ppo_ontology.ttl  readme.org
pad_api/: Dockerfile  start.sh
rdf/: rdflib.org
resources/: doaj_context.json  doaj_convert.sparql  openalex_context.json  openalex_convert.sparql  pad_shacl.ttl  publisher_peer_review_context.json  publisher_peer_review_convert.sparql  sherpa_romeo_context.json  sherpa_romeo_convert.sparql  wikidata.sparql  wikidata_convert.sparql
src/: api.py  bulk.py  bulk_doaj.py  bulk_openalex.py  bulk_publisher_peer_review.py  convert.py  store.py  (+22 more)
(+70 files in other folders)
