[tool.poetry]
name = "journalobservatory"
version = "0.0.1"
description = ""
authors = ["Bram van den Boomen <b.van.den.boomen@cwts.leidenuniv.nl>"]

[tool.poetry.dependencies]
python = "3.9.13"
PyLD = "^2.0.3"
jupyter = "^1.0.0"
ipykernel = "^6.12.1"
SPARQLWrapper = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
